Barra superior PARTE 1

--- a/index.html
+++ b/index.html
@@ -11,8 +11,11 @@
     
 </head>
 <body>
-    <h1>OláDSmovies</h1>
-    <h2>Promoções</h2>
-    <h3>Agenda de filmes</h3>
+    <header>
+        <nav class="container">
+            <h1>DSmovie</h1>
+            <a href="https://github.com/gabrielsantoz">/gabrielsantoz</a>
+        </nav>
+    </header>
 </body>
 </html>
