--- a/index.html
+++ b/index.html
@@ -24,6 +24,18 @@
             </div>
         </nav>
     </header>
+
+    <main>
+        <section id ="dsmovie-card-list" class="container">
+            <div class="dsmovie-card">
+                <img src="https://www.themoviedb.org/t/p/w220_and_h330_face/63O5iixxXSmyOaBas7ek1tkeVra.jpg" alt="Homem aranha 3">
+                <div class="dsmovie-card-description">
+                    <h3>Homem aranha 3</h3>
+                    <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                </div>
+            </div>
+        </section>
+    </main>
 </body>
 
 </html>
