--- a/form.html
+++ b/form.html
@@ -37,20 +37,23 @@
                         <div class="dsmovie-form-description">
                             <h3>Homem Aranha 3</h3>
                             <form class="form-group dsmovie-form-group">
-                                <div class="form-group">
+                                <div class="form-group dsmovie-form-group">
                                     <label for="email">Informe seu email</label>
                                     <input class="form-control" type="email" id="email">
                                 </div>
+
                                 <div class="form-group dsmovie-form-group">
                                     <label for="score">Informe sua avaliação</label>
-                                    <select class="formcontrol" name="score" id="score">
+                                    <select class="form-control" name="score" id="score">
                                         <option value="1">1</option>
                                         <option value="2">2</option>
                                         <option value="3">3</option>
                                         <option value="4">4</option>
                                         <option value="5">5</option>
                                     </select>
+                                    
                                 </div>
+
                                 <div class="dsmovie-form-btn-container">
                                     <button class="dsmovie-btn" type="submit">Salvar</button>
                                     <a class="dsmovie-btn" href="index.html">Cancelar</a>
