--- a/index.html
+++ b/index.html
@@ -36,7 +36,20 @@
                             alt="Homem Aranha 3">
                         <div class="dsmovie-card-description">
                             <h3>Homem Aranha 3</h3>
-                            <a class="dsmovie-btn" href="form.html">Avaliar</a>
+
+                            <div class="dsmovie-card-description-bottom">
+                                <h4>3.8</h4>
+                                <div>
+                                    <img src="img/Star-full.svg" alt="Star">
+                                    <img src="img/Star-full.svg" alt="Star">
+                                    <img src="img/Star-full.svg" alt="Star">
+                                    <img src="img/Star-half.svg" alt="Star">
+                                    <img src="img/Star-empty.svg" alt="Star">
+                                </div>
+                                <p>13 avaliações</p>
+                                <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                            </div>
+                            
                         </div>
 
                     </div>
