--- a/index.html
+++ b/index.html
@@ -28,6 +28,19 @@
     <main>
         <section id="dsmovie-card-list" class="container">
 
+            <div class="dsmovie-pagination-container">
+                <div class="dsmovie-pagination-box">
+                    <button disabled>
+                        <img class="dsmovie-flip-horizontal" src="img/Arrow.svg" alt="Voltar">
+                    </button>
+                    <p>1 de 23</p>
+                    <button>
+                        <img src="img/Arrow.svg" alt="Próxima">
+                    </button>
+
+                </div>
+            </div>
+
             <div class="row">
 
                 <div class="col sm 6 col-lg-4 col-xl-3 mb-3">
